--- a/application/templates/user.html
+++ b/application/templates/user.html
@@ -174,6 +174,22 @@
 
 </body>
 <script type="text/javascript">
+    $(document).ready(function() {
+        var socket = io.connect("http://127.0.0.1:5000")
+        socket.on('connect', function() {
+            socket.send('User connected!');
+        });
+
+        socket.on('message', function(data) {
+
+        });
+        $('#send').on('click', () => {
+            socket.send($('#messagebox').val());
+            console.log($('#messagebox').val());
+        });
+    })
+</script>
+<script type="text/javascript">
     const sendBt = document.querySelector('#send')
     const room = document.querySelector('.room')
     const tarea = document.querySelector('textarea');
@@ -262,18 +278,23 @@
 
             addText(false, tarea.value);
             tarea.value = ""
-            checkText()
+            checkText();
+
         });
-        window.addEventListener('load', checkText)
-        tarea.addEventListener('keyup', checkText)
-        tarea.addEventListener('focus', checkText)
-        tarea.addEventListener('blur', checkText)
+
+        window.addEventListener('load', checkText);
+        tarea.addEventListener('keyup', checkText);
+        tarea.addEventListener('focus', checkText);
+        tarea.addEventListener('blur', checkText);
     }
 
     app()
 </script>
-<script type="text/javascript">
-</script>
+
+
+</html>
+
+</html>
 
 </html>
 
