--- a/application/templates/user.html
+++ b/application/templates/user.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js" integrity="sha512-E8QSvWZ0eCLGk4km3hxSsNmGWbLtSCSUcewDQPQWZF6pEU8GlT8a5fF32wOl1i8ftdMhssTrF/OhyGWwonTcXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.1/socket.io.min.js" integrity="sha512-mHO4BJ0ELk7Pb1AzhTi3zvUeRgq3RXVOu9tTRfnA6qOxGK4pG2u57DJYolI4KrEnnLTcH9/J5wNOozRTDaybXg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>Chatting as {{username}}</title>
@@ -119,6 +120,7 @@
         text-align: start;
         max-height: 200px;
         width: 500px;
+        height: 40px;
         max-width: 80%;
         margin: 10px;
         padding: 10px;
@@ -173,22 +175,16 @@
 
 
 </body>
+
 <script type="text/javascript">
-    $(document).ready(function() {
-        var socket = io.connect("http://127.0.0.1:5000")
-        socket.on('connect', function() {
+    var socket = io.connect("http://127.0.0.1:5000")
+    $(document).ready(() => {
+        socket.on('connect', () => {
             socket.send('User connected!');
-        });
-
-        socket.on('message', function(data) {
-
-        });
-        $('#send').on('click', () => {
-            socket.send($('#messagebox').val());
-            console.log($('#messagebox').val());
         });
     })
 </script>
+
 <script type="text/javascript">
     const sendBt = document.querySelector('#send')
     const room = document.querySelector('.room')
@@ -268,18 +264,16 @@
             sendBt.removeAttribute('disabled')
         }
     }
-
     //home of event listeners and co
     function app() {
         sendBt.addEventListener('click', () => {
             // true-false value is subject to change accordingly
             // but since we are incharge of only what we type and send, it stays at false
-            //meaning message is always OUTGOING
-
+            // meaning message is always OUTGOING
             addText(false, tarea.value);
-            tarea.value = ""
+            tarea.value = "";
             checkText();
-
+            socket.send(tarea.value);
         });
 
         window.addEventListener('load', checkText);
@@ -290,12 +284,5 @@
 
     app()
 </script>
-
-
-</html>
-
-</html>
-
-</html>
 
 </html>
